# telegram4kvas

./: .flake8  .pre-commit-config.yaml  flake.nix  pyproject.toml  telegram_bot.py
telegram4kvas/: __init__.py  config.py  kbd.py  log.py  main.py  utils.py
telegram4kvas/routers/: hosts.py  states.py
telegram4kvas/utils/: helpers.py  models.py
